# PRFAQ

./: .gitignore  C.txt  Dockerfile  Dockerfile.app  Dockerfile.webhook  README.md  README.txt  Saas C1.txt  __init__.py  app - b.py  app.py  aws.txt  convert_to_utf8.py  db_txt.py  docker-compose.yml  files.txt  letters.json  nginx.conf  prfaqs.json  prompt.json  pyproject.toml  read_db.py  readme1118.txt  readme_aws.txt  readme_mp.txt  requirements.txt  run_tests.py  templates.json  test_request.py  webhook.txt  z-user process.txt
.streamlit/: config.toml
admin/: admin.py  analysis.py  analysis_mp.py  overview.py  user_management.py  user_mp.py
assets/: scheduler.py  user.py
aws/: __init__.py  a.html  a.py  aws_mp.py  aws_mp2.py  b.py  customer.py  customer_manager.py  ding.py  entitlement.py  exceptions.py  fakecustomer.py  notification.py  setup.py  webhook.py
backend/: Dockerfile  requirements.txt  run.py
bill/: __init__.py  bill.py  bill_base.py  points.py
config/: aws_config.json  bill.json  config.json  letters.json  mp_session.json  prfaqs.json  prompt-aar.json  prompts.json  templates.json  users.json
db/: __init__.py  backup_db.py  db.txt  db1118.txt  db_admin.py  db_clear.py  db_connection.py  db_init.py  db_overview.py  db_read.py  db_restore.py  db_status.py  db_table.py  db_upgrade.py  migrate_data.py  read_db.py  users.db
doc/: IAM.txt  Saas api interface.txt  Saas code.txt  Saas contract.txt  aws_int_guide.txt  ding.txt  webhook.txt
frontend/: Dockerfile  app.py  billing.py  generators.py  history.py  requirements.txt  styles.py  utils.py
(+67 files in other folders)
