[project]
name = "prfaq"
version = "0.1.0"
description = "领导力测评系统"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "json5>=0.9.14",
    "fpdf2>=2.7.0",
    "reportlab>=4.0.7",
    "requests>=2.31.0",
    "anthropic>=0.3.11",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 